packages/end-user/src/css/shared/_tile-selector.scss
.tile-button,
button.tile-button {
    background: $color-white;
    border: 1px solid $color-accent-neutral-70;
    color: $color-slate;
    cursor: pointer;
    font-size: 15px;
    padding: $spacing-xl $spacing-lg $spacing-lg $spacing-lg;
    line-height: normal;
    height: auto;
    white-space: normal;

    display: flex;
    flex-direction: column;
    position: relative;

    align-items: center;
    justify-content: space-between;
    -ms-flex: 1 1 100%;

    $icon-size: 80px;

    &:hover,
    &:active,
    &.tile-button--selected {
        border-color: $color-active-blue;

        .tile-button__icon {
            color: $color-active-blue;
        }
        .tile-button__icon-container {
            svg {
                fill: $color-active-blue;
            }
        }
    }
    &.tile-button--selected {
        box-shadow: 0 2px 5px 0 rgba($color-black, 0.2);

        & .tile-button__title {
            @include font-pn-semibold;
        }
    }

    &__details {
        position: relative;
        text-align: left;
        color: $color-neutral-50;
        list-style: none;
        margin-top: $spacing-lg;
        line-height: 1em;

        li {
            margin-bottom: $spacing-xs;

            &:before {
                content: '•';
                position: absolute;
                left: -10px;
            }
            &:last-child {
                margin-bottom: 0;
            }
        }
    }

    &__divider {
        border-top: 1px solid $color-neutral-50;
        margin-top: $spacing-lg;
        width: 100%;
    }

    &__icon {
        font-size: $icon-size;
        color: $color-midnight;

        &--action {
            font-size: 28px;
            margin-bottom: $spacing-lg;
        }
    }

    &__icon-container {
        height: $icon-size;
        margin-bottom: $spacing-lg;
        display: flex;
        align-items: center;
        justify-content: center;

        &--square {
            margin-bottom: $spacing-md;
        }

        img,
        svg {
            width: auto;
            height: auto;
            max-width: 100%;
            max-height: 100%;
        }
    }

    &__content {
        @include break-word;
        flex-grow: 1;
        max-width: 100%;
        overflow: hidden;

        line-height: 1.3em;
        text-align: left;

        &--action {
            text-align: center;
        }
    }

    &__top {
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        z-index: 1000;

        &-left {
            position: absolute;
            top: $spacing-md;
            left: $spacing-sm;
        }

        &-right {
            position: absolute;
            top: $spacing-md;
            right: $spacing-sm;
        }
    }

    &__title {
        color: $color-active-blue;
        font-size: 17px;
        margin-top: $spacing-lg;
        text-transform: uppercase;
        word-break: break-word;

        &--square {
            margin-top: 0;
        }
    }

    &__action-title.text-primary {
        font-weight: 600;
    }

    &--panel {
        @include arrow(20px);

        &:after {
            bottom: -2%;
            transform: rotate(180deg);
            transform-origin: 25%;
        }
    }

    &--square {
        flex-grow: 0;
        min-height: 165px;
        min-width: 165px;
        padding: 25px;
    }

    &--action {
        flex-grow: 0;
        justify-content: flex-start;
        margin-bottom: $spacing-xl;
        min-width: 180px;
        padding: $spacing-lg $spacing-sm;
        min-height: 180px;

        &:hover {
            box-shadow: 0 2px 5px 0 rgba($color-black, 0.2);

            // Overriding default hover style
            border: 1px solid $color-accent-neutral-70;
            .tile-button__icon {
                color: $color-slate;
            }
        }

        &:active {
            box-shadow: inset 0 2px 5px 0 rgba($color-black, 0.2);
        }
    }
}

.tile-selector {
    display: flex;

    > * {
        flex-grow: 1;
        flex-shrink: 1;
        margin-right: $spacing-md;
        flex-basis: 0;

        &:last-child {
            margin-right: 0;
        }
    }

    &--stacked {
        display: block;

        .flex-row {
            display: block;

            a {
                display: flex;
            }
        }

        > * {
            margin-right: 0;
            margin-bottom: $spacing-md;
            width: 100%;

            &:last-child {
                margin-bottom: 0;
            }
        }
    }

    // Putting this here instead of in .tile-button--action due to specificity issues from the rule above
    &--action {
        flex-wrap: wrap;
        > * {
            flex-grow: 0;
            margin-right: $spacing-xl;
        }
    }

    &__group {
        flex-flow: column wrap;
        height: auto;

        &:not(:last-of-type) {
            margin-right: $spacing-xl;
        }

        &--grow-1 {
            flex-grow: 1;
        }

        &--grow-2 {
            flex-grow: 2;
        }

        &--grow-3 {
            flex-grow: 3;
        }

        &--grow-4 {
            flex-grow: 4;
        }

        &--square {
            flex-grow: 0;
            flex-basis: auto;
        }

        &--stacked {
            margin-right: 0;
        }

    }

    &__group-tiles {
        flex: 1;
        margin-top: $spacing-sm;
        width: 100%;

        > * {
            flex-grow: 1;
            flex-shrink: 1;

            margin-right: $spacing-md;
            flex-basis: 0%;
            &:last-child {
                margin-right: 0;
            }
        }

        &--stacked {
            flex-flow: column nowrap;

            > * {
                margin-bottom: $spacing-md;
                margin-right: 0;

                &:last-child {
                    margin-bottom: 0;
                }
            }
        }
    }

    &__group-title {
        color: $color-accent-neutral-40;
        font-size: $font-size-reduced;
        text-transform: uppercase;
        width: 100%;
    }
}

.tile-button--side-icon,
button.tile-button--side-icon {
    flex-direction: row;

    box-sizing: border-box;

    padding: $spacing-md $spacing-lg;

    .tile-button {
        &__icon {
            line-height: 60px;

            &:before {
                font-size: 60px;
                line-height: 60px;
                height: 60px;
                vertical-align: middle;
            }
        }

        &__icon-container {
            height: 60px;
            width: 60px;
            margin: 0 $spacing-lg 0 0;
        }

        &__content-container {
            flex-grow: 1;

            text-align: left;
        }

        &__title {
            display: flex;

            margin-top: 0;
            text-align: left;
        }

        &__note {
            @include text-body;

            flex-grow: 1;
            flex-shrink: 0;

            text-transform: none;
            text-align: right;
            margin-left: $spacing-lg;
        }

        &__link {
            font-size: $font-size-normal;
        }
    }
}

.tile-button--stacked-small,
button.tile-button--stacked-small {
    padding: $spacing-sm $spacing-md;
    margin-bottom: $spacing-md;
    margin-right: 0;
    min-height: 75px;

    .tile-button {
        &__icon {
            line-height: 40px;

            &:before {
                font-size: 40px;
                line-height: 40px;
                height: 40px;
            }
        }

        &__icon-container {
            height: 40px;
            width: 40px;
            margin: 0 $spacing-md 0 0;
        }

        &__title {
            display: flex;
            color: $color-accent-neutral-10;
            text-transform: none;
            margin-top: 0;
            margin-bottom: 0 !important;
            text-align: left;
        }
    }
}

.tile-panel {
    box-shadow: 0 3px 4px 0 rgba($color-black, 0.1);

    background-color: $color-active-blue;
    box-sizing: border-box;
    color: $color-white;
    margin-right: auto;
    margin-top: $spacing-xs;
    padding: $spacing-lg;
    width: 66%;

    &--right {
        margin-left: auto;
        margin-right: 0;
    }

    &__label {
        border-bottom: 0.25px solid $color-neutral-80;
        padding-bottom: $spacing-sm;
        text-transform: uppercase;
    }

    &__option {
        display: flex;
        justify-content: space-between;
        margin-left: $spacing-md;
        padding: $spacing-lg $spacing-sm $spacing-md;

        &:not(:last-child) {
            border-bottom: 0.25px solid $color-neutral-80;
        }

        &__label {
            @include font-pn-semibold;
            font-size: 17px;
            margin-bottom: $spacing-xs;
        }

        &__button {
            border-color: $color-white;
            border-radius: 3px;
            color: $color-active-blue;

            &:hover {
                text-shadow: 0 0 0.5px $color-active-blue;
                border-color: $color-white;
                box-shadow: 0 0 3px #0e4054;
            }
        }
    }
}

.tile-button__grid {
    display: flex;
    flex-wrap: wrap;
    margin-left: calc(#{$spacing-sm} * -1);
    margin-right: calc(#{$spacing-sm} * -1);

    & > * {
        flex: 1;
        flex-grow: 0;
        min-height: 300px;
        flex-basis: calc((100% / 3) - #{$spacing-sm} * 2) !important;
        box-sizing: border-box;
        margin: 0 $spacing-sm $spacing-md $spacing-sm;

        @media only screen and (max-width: 1250px) {
            flex-basis: calc((100% / 2) - #{$spacing-sm} * 2) !important;
        }

        @media only screen and (max-width: 1000px) {
            flex-basis: 100% !important;
        }
    }
}

